tests/ok/TypecheckMain.java
class CheckMain{
    int n;
    boolean b;
    public static void main(String[] a){
        System.out.println(42);
    }
}
