tests/error/TestBoolOperation.java
class TestIndex{
    public static void main(String[] a){
        boolean res;
        // Fails because the second argument is not a boolean
        res = true && 4;
    }
}
